<resources>
    <string name="app_name">Cryptography</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--fb-->
    <string name="facebook_app_id">1578307229017952</string>
    <string name="fb_login_protocol_scheme">fb1578307229017952</string>


    <string name="caeser">Caeser</string>
    <string name="affine">Affine</string>
    <string name="vigenere">Vigenere</string>
    <string name="playfair">Playfair</string>
    <string name="ortho">Orthogonal</string>
    <string name="reverse">Reverse orthogonal</string>
    <string name="diagonal">Diagonal</string>
    <!--Login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="gmailSignIn">Sign in with gmail</string>
    <string name="anonSignIn">Sign in anonymously</string>
    <string name="facebookSignIn">Sign in with facebook</string>
    <string name="register">Register</string>
    <string name="register_success">Successfully registered! </string>
    <string name="signin_question">Do you want to sign in?</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="wait_loading">Please wait to finish loading...</string>
    <string name="altLogins">Or you could log in with...</string>
    <string name="register_fail">This user already exists</string>
    <string name="login_fail">Wrong email and password combination</string>
    <string name="anon_fail">Anonymous log in failed</string>
    <!-- Bottom Navigationa -->
    <string name="nav_cryptography">Cryptography</string>
    <string name="nav_exercises">Exercises</string>
    <string name="nav_saved">Saved</string>

    <!-- Cryptographer Fragment Strings -->
    <string name="encrypt"> Encrypt </string>
    <string name="decrypt"> Decrypt </string>
    <string name="clear"> Clear </string>
    <string name="plain_text"> Plain text </string>
    <string name="cipher_text"> Cipher Text </string>
    <string name="key"> Key </string>
    <string name="input">Input</string>
    <string name="output">Output</string>

    <string name="caeser_encryption">caeser cipher </string>
    <string name="caeser_helper_key">The key must be between values 1 and 25</string>


    <string name="affine_cipher">affine cipher</string>
    <string name="keyA"> Key A</string>
    <string name="keyB"> Key B</string>
    <string name="affine_helper_key">The key must be invertible in relation to 26</string>

    <string name="vignere_cipher">vigenere cipher</string>
    <string name="playfair_cipher">playfair cipher</string>


    <string name="transpositional_cipher">transpositional</string>
    <string name="transpositional_orthogonal">Orthogonal</string>
    <string name="transpositional_orthogonal_boustrophedon">Orthogonal Boustrophedon </string>
    <string name="transpositional_orthogonal_boustrophedon2">Orthogonal \n Boustrophedon </string>
    <string name="transpositional_diagonal">Diagonal</string>
    <string name="transpositional_helper_key">Key must consist of atleast 2 numbers.\n If sorted the key should consist of a series of incrementing values.</string>
    <string name="transpositional_helper_key2">Key must consist of atleast 2 numbers.\n If sorted the key should consist of a series of incrementing values.</string>
    <string name="transpositional_diagonal_key">Key must be shorter than the input. </string>
    <string name="trans_ortho_boustrophedon_cipher">transpositional orthogonal boustrophedon cipher</string>
    <string name="trans_ortho_cipher">transpositional orthogonal cipher</string>
    <string name="trans_diagonal_cipher">transpositional diagonal cipher</string>


    <string name="correct_answer">Correct answer</string>
    <string name="wrong_answer">Wrong answer</string>
    <!--Exercises fragment-->
    <string name="exercise">Exercise</string>
    <string name="cipher_colon">Cipher : </string>
    <string name="plain_text_colon"> Plain text : </string>
    <string name="cipher_text_colon"> Cipher text :</string>
    <string name="key_colon"> Key :</string>
    <string name="new_exercise">Next </string>
    <string name="pt">plain text</string>
    <string name="ct">cipher text</string>
    <string name="ek">encrypt</string>
    <string name="dk">decrypt</string>
    <string name="answer">Answer</string>
    <string name="body_pt">Use the %1$s to %2$s the %3$s %4$s with the key %5$s</string>
    <string name="caesar_body_key_pt2">with the key</string>
    <string name="generate_answer">See answer</string>
    <string name="saved_exercise">Exercise is saved</string>
    <string name="unsave_exercise">Exercise is deleted</string>
    <string name="restore_exercise">Exercise is restored</string>
    <string name="undo">UNDO</string>
    <string name="configure_exercise">Configure exercise generation settings</string>
    <string name="ciphers_disabled">Atleast one cipher needs to be enabled to generate an exercise</string>
    <string name="offline_mode"> [Offline mode] </string>

    <string name="include_sentences">Sentences</string>
    <string name="alert_sentence_Fconnection_tite">No internet connection</string>
    <string name="alert_sentence_Fconnection_body">This feature requires a one of download of some aditional files for which you need an internet connection</string>
    <string name="alert_sentence_Tconnection_tite">Download permission</string>
    <string name="alert_sentence_Tconnection_body">This feature requires a one of download of some aditional files. Do you want to download these files?</string>
    <string name="OK">Ok</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>

    <string name="downloading">Downloading data</string>
    <string name="wait">Please wait...</string>


    <string name="change_language_title">Change language</string>
    <string name="change_language_body">Changing the language requires an application restart. Are you sure you want to change the language?</string>
    <string name="change_language_yes">Yes</string>
    <string name="change_language_no">No</string>

    <string name="no_internet">No internet connection</string>
    <string name="no_internet_body">Internet connection has ben lost. The application will run in offline mode. Data can be temporarily saved even in offline mode. However if you do not reconnect to the internet in the next two to four weeks its possible that the data saved and/or edited during this will be lost.</string>
    <string name="no_message_again">Don\'t show me this message again</string>

    <string name="lang">Language</string>
    <string name="logout">Log out</string>
    <string name="logut_body">You are currently logged in with an anonymous account. If you sign out you will not be able to recover your saved data. Are you sure you want to log out?</string>

    <string-array name="spinner_filter">
        <item>All exercises</item>
        <item>Caeser exercises</item>
        <item>Affine exercises</item>
        <item>Playfair exercises</item>
        <item>Vigenere exercises</item>
        <item>Orthogonal exercises</item>
        <item>Reverse Orthogonal exercises</item>
        <item>Diagonal exercises</item>
    </string-array>

    <string name="filter">Filter exercises</string>
</resources>
