<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtDialogTitle"
        style="@style/CryptographerTitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayDark"
        android:drawableStart="@drawable/internet_loss_icon"
        android:drawablePadding="10dp"
        android:drawableTint="@color/orange"
        android:text="@string/no_internet"
        />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/txtDialogBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/no_internet_body"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/cbMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="@string/no_message_again" />



    <Button
        android:id="@+id/btnDialogOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="OK" />

</LinearLayout>