<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.PlayfairFragment">

    <TextView
        android:id="@+id/btnPlayfairExpand"
        style="@style/CryptographerTitles"
        android:text="@string/playfair_cipher" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/layoutPlayfairExpandible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:el_duration="500"
        app:el_expanded="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPlayfairInput"
                style="@style/CryptographerEditText"
                android:hint="@string/input"
                app:boxBackgroundColor="#FFFFFF"
                app:helperTextEnabled="false"
                app:hintTextAppearance="@style/TextInputLayoutHelper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlayfairInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:textSize="15sp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPlayfairKey"
                style="@style/CryptographerEditText"
                android:layout_below="@id/layoutPlayfairInput"
                android:layout_marginBottom="10dp"
                android:hint="@string/key"
                app:helperTextEnabled="true"
                app:hintTextAppearance="@style/TextInputLayoutHelper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlayfairKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:inputType="textPhonetic"
                    android:imeOptions="flagNoExtractUi"
                    android:textSize="15sp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layoutButtonsPlayfair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutPlayfairKey"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPlayfairEncrypt"
                    style="@style/CryptographerButtons"
                    android:layout_marginLeft="10dp"
                    android:text="@string/encrypt" />

                <Button
                    android:id="@+id/btnPlayfairDecrypt"
                    style="@style/CryptographerButtons"
                    android:backgroundTint="#D5D5D5"
                    android:text="@string/decrypt" />

                <Button
                    android:id="@+id/btnPlayfairClear"
                    style="@style/CryptographerButtons"
                    android:layout_marginRight="10dp"
                    android:text="@string/clear" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPlayfairOutput"
                style="@style/CryptographerOutput"
                android:layout_below="@id/layoutButtonsPlayfair"
                android:hint="@string/cipher_text"
                android:textColorHint="#FFFFFF"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPlayfairOutput"
                    style="@style/CryptographerOutputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </net.cachapa.expandablelayout.ExpandableLayout>
</LinearLayout>